Get cores and versions list api v1
